force-app/main/default/objects/Account/fields/PE_SubVerticals__c.field-meta.xml
<CustomField>
    <fullName>PE_SubVerticals__c</fullName>
    <label>PE SubVerticals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3D Printing</fullName>
            </value>
            <value>
                <fullName>AdTech</fullName>
            </value>
            <value>
                <fullName>Agtech</fullName>
            </value>
            <value>
                <fullName>Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>Augmented Reality (AR)</fullName>
            </value>
            <value>
                <fullName>Autonomous Vehicle</fullName>
            </value>
            <value>
                <fullName>Big Data</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
            <value>
                <fullName>Cannabis/Medical Marijuana</fullName>
            </value>
            <value>
                <fullName>Chatbots</fullName>
            </value>
            <value>
                <fullName>Clean Technology</fullName>
            </value>
            <value>
                <fullName>Cloud Computing</fullName>
            </value>
            <value>
                <fullName>Cryptocurrency</fullName>
            </value>
            <value>
                <fullName>Daas</fullName>
            </value>
            <value>
                <fullName>Deep Learning</fullName>
            </value>
            <value>
                <fullName>Digital Brokerage</fullName>
            </value>
            <value>
                <fullName>Drones</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
            <value>
                <fullName>Edge Computing</fullName>
            </value>
            <value>
                <fullName>EdTech</fullName>
            </value>
            <value>
                <fullName>Electric &amp; Hybrid Vehicles</fullName>
            </value>
            <value>
                <fullName>eWallets &amp; Money Transfer</fullName>
            </value>
            <value>
                <fullName>File/Cloud Storage</fullName>
            </value>
            <value>
                <fullName>Financial Data</fullName>
            </value>
            <value>
                <fullName>FinTech</fullName>
            </value>
            <value>
                <fullName>HealthTech</fullName>
            </value>
            <value>
                <fullName>IaaS</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>InsureTech</fullName>
            </value>
            <value>
                <fullName>IoT (Internet of Things)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>