force-app/main/default/objects/Account/fields/plaunch__HitHorizonsID__c.field-meta.xml
<CustomField>
    <fullName>plaunch__HitHorizonsID__c</fullName>
    <description>HitHorizons ID</description>
    <label>HitHorizons ID</label>
    <length>14</length>
    <type>Text</type>
</CustomField>