force-app/main/default/objects/Account/fields/Portfolio_of_companies__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_of_companies__c</fullName>
    <description>Link to website of PE/VC businesses highlighting their portfolio of investment businesses.</description>
    <label>Portfolio of companies</label>
    <type>Url</type>
</CustomField>