force-app/main/default/objects/Account/fields/PrimaryOffice__c.field-meta.xml
<CustomField>
    <fullName>PrimaryOffice__c</fullName>
    <label>Primary Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EMPAUAOffices</valueSetName>
    </valueSet>
</CustomField>