force-app/main/default/objects/Account/fields/ProcesstoEngage__c.field-meta.xml
<CustomField>
    <fullName>ProcesstoEngage__c</fullName>
    <label>Process to Engage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>