force-app/main/default/objects/Account/fields/QualityRelationshipCustomerEMPAUA__c.field-meta.xml
<CustomField>
    <fullName>QualityRelationshipCustomerEMPAUA__c</fullName>
    <label>Quality / Relationship Customer - EMPAUA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>