force-app/main/default/objects/Account/fields/Rates__c.field-meta.xml
<CustomField>
    <fullName>Rates__c</fullName>
    <label>Rates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>