force-app/main/default/objects/Account/fields/ReferredBy__c.field-meta.xml
<CustomField>
    <fullName>ReferredBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account which referred this customer.</inlineHelpText>
    <label>Referred By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>