force-app/main/default/objects/Account/fields/RegionsworkedinPick__c.field-meta.xml
<CustomField>
    <fullName>RegionsworkedinPick__c</fullName>
    <label>Regions worked in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
            <value>
                <fullName>Scandinavia</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>