force-app/main/default/objects/Account/fields/RegisterCourt__c.field-meta.xml
<CustomField>
    <fullName>RegisterCourt__c</fullName>
    <inlineHelpText>DE Only - Court of HRB registration (https://www.unternehmensregister.de/ureg/)</inlineHelpText>
    <label>Register Court</label>
    <length>255</length>
    <type>Text</type>
</CustomField>