force-app/main/default/objects/Account/fields/RevenueProjectForecast__c.field-meta.xml
<CustomField>
    <fullName>RevenueProjectForecast__c</fullName>
    <label>Revenue / Project Forecast</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>