force-app/main/default/objects/Account/fields/ReverseChargeApplicableAuto__c.field-meta.xml
<CustomField>
    <fullName>ReverseChargeApplicableAuto__c</fullName>
    <formula>IF(TEXT(EMPAUAEntityRef__r.BillingCountry__c) &lt;&gt; BillingCountry, true, 
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the billing country for EMPAUA entity is different than the billing country for this account, reverse charge will be applicable.</inlineHelpText>
    <label>Reverse Charge Applicable</label>
    <type>Checkbox</type>
</CustomField>