force-app/main/default/objects/Account/fields/Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Status__c</fullName>
    <label>Sales Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upsell Required</fullName>
            </value>
            <value>
                <fullName>Upsell In Progress</fullName>
            </value>
            <value>
                <fullName>Upsell Complete for Now</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>