force-app/main/default/objects/Account/fields/SalesforceAE_Old__c.field-meta.xml
<CustomField>
    <fullName>SalesforceAE_Old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the Salesforce Account Executive for this company? Please enter the Salesforce Account Executive as Contact here. Please be aware that this contact needs to be related to an Account contains &quot;Salesforce&quot; or &quot;salesforce&quot;.</inlineHelpText>
    <label>Salesforce AE</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>contains</operation>
            <value>Salesforce,salesforce,sfdc</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Salesforce AE)</relationshipLabel>
    <relationshipName>Salesforce_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>