force-app/main/default/objects/Account/fields/SalesforceEdition__c.field-meta.xml
<CustomField>
    <fullName>SalesforceEdition__c</fullName>
    <description>Edition of Salesforce Org of Existing SF Customer</description>
    <inlineHelpText>Which edition of Salesforce is the customer using?</inlineHelpText>
    <label>Salesforce Edition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IsSalesforceCustomer__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce IQ</fullName>
            </value>
            <value>
                <fullName>Einstein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>