force-app/main/default/objects/Account/fields/Squad__c.field-meta.xml
<CustomField>
    <fullName>Squad__c</fullName>
    <label>Squad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Squads</valueSetName>
    </valueSet>
</CustomField>