force-app/main/default/objects/Account/fields/SquadOld__c.field-meta.xml
<CustomField>
    <fullName>SquadOld__c</fullName>
    <label>Squad (Old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highly Koalafied Squad</fullName>
            </value>
            <value>
                <fullName>B2B2C Squad</fullName>
            </value>
            <value>
                <fullName>DopeScope__c Squad</fullName>
            </value>
            <value>
                <fullName>Managed Services Squad</fullName>
            </value>
            <value>
                <fullName>Bomb Squad</fullName>
            </value>
            <value>
                <fullName>By Lightning Squad</fullName>
            </value>
            <value>
                <fullName>Kinton Squad</fullName>
            </value>
            <value>
                <fullName>Squid Squad</fullName>
            </value>
            <value>
                <fullName>Scorpion Force Squad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>