force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>In progress: if the candidate is being contacted by someone from within EMPAUA.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Discovery day</fullName>
            </value>
            <value>
                <fullName>Salary proposal</fullName>
                <label>Offer Made</label>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>Candidate dropped out</fullName>
            </value>
            <value>
                <fullName>Freelancer</fullName>
            </value>
            <value>
                <fullName>Teal one-pager</fullName>
                <isActive>false</isActive>
                <label>Teal one-pager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>