force-app/main/default/objects/Account/fields/SumClientMoraleAuto__c.field-meta.xml
<CustomField>
    <fullName>SumClientMoraleAuto__c</fullName>
    <label>Sum client morale</label>
    <summarizedField>Morale__c.MoraleScore__c</summarizedField>
    <summaryFilterItems>
        <field>Morale__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Client Morale</value>
    </summaryFilterItems>
    <summaryForeignKey>Morale__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>