force-app/main/default/objects/Account/fields/TASKRAY__trCustomerOnboardingScore__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trCustomerOnboardingScore__c</fullName>
    <description>A calculated customer onboarding score based on a TaskRay Project related to this Account. Based on a project's Initial Estimated Duration vs. Actual Duration and the average of Internal &amp; External Sentiment.</description>
    <inlineHelpText>This field stores a calculated customer onboarding score based on a TaskRay Project related to this Account.</inlineHelpText>
    <label>Customer Onboarding Score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>