force-app/main/default/objects/Account/fields/TASKRAY__trDesiredOutcomes__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trDesiredOutcomes__c</fullName>
    <description>A customer's desired outcome(s) for their onboarding process. Can be populated from the Desired Outcomes field on TaskRay Project.</description>
    <inlineHelpText>Use this field to capture a customer's desired outcome(s). Can be populated from the Desired Outcomes field on TaskRay Project.</inlineHelpText>
    <label>Desired Outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>