force-app/main/default/objects/Account/fields/TASKRAY__trOnboardingDuration__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trOnboardingDuration__c</fullName>
    <formula>IF(
OR(
ISBLANK( TASKRAY__trOnboardingStartDate__c ),
ISBLANK( TASKRAY__trOnboardingEndDate__c )
), 
NULL,
TASKRAY__trOnboardingEndDate__c - TASKRAY__trOnboardingStartDate__c)</formula>
    <label>Onboarding Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>