force-app/main/default/objects/Account/fields/TASKRAY__trOnboardingStartDate__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trOnboardingStartDate__c</fullName>
    <description>Used by TaskRay to record the actual start date of the onboarding project associated with this account.</description>
    <inlineHelpText>Used by TaskRay to record the actual start date of the onboarding project associated with this account.</inlineHelpText>
    <label>Onboarding Start</label>
    <type>Date</type>
</CustomField>