force-app/main/default/objects/Account/fields/TaxGroupRef__c.field-meta.xml
<CustomField>
    <fullName>TaxGroupRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Custom Metadata Type &quot;Object Field Sync Definition&quot; to define Tax Group per Billing Line Insert.</description>
    <inlineHelpText>Please state which Tax Group will be applied in the Billings for this Account.</inlineHelpText>
    <label>Tax Group</label>
    <referenceTo>AcctSeed__Tax_Group__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>