force-app/main/default/objects/Account/fields/Tools__c.field-meta.xml
<CustomField>
    <fullName>Tools__c</fullName>
    <description>Text box to enter the list of tools they use.</description>
    <inlineHelpText>Which tools the company use? (e.g. Salesforce, Excel, Google Docs, Industry Solution, Own Development System, Other...)</inlineHelpText>
    <label>Tools</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>