force-app/main/default/objects/Account/fields/TotalBookings__c.field-meta.xml
<CustomField>
    <fullName>TotalBookings__c</fullName>
    <inlineHelpText>How much bookings has this customer generated.</inlineHelpText>
    <label>Total Bookings</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>