force-app/main/default/objects/Account/fields/TotalRevenueNet__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenueNet__c</fullName>
    <description>Filled by a LookupRollupSummary</description>
    <inlineHelpText>Sums up all revenue (net) that is either connected via Billing Mappings or Invoice (Custom Object in Use before Accounting Seed)</inlineHelpText>
    <label>Total Revenue (Net)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>