force-app/main/default/objects/Account/fields/TotalRevenuenetBillingMappingTrig__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenuenetBillingMappingTrig__c</fullName>
    <inlineHelpText>Automatically populated with DLRS from Billing Mapping with Billing Posting Status = &apos;Posted&apos;</inlineHelpText>
    <label>Total Revenue (net) - Billing Mapping</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>