force-app/main/default/objects/Account/fields/TotalRevenueNetInvoiceTrig__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenueNetInvoiceTrig__c</fullName>
    <description>Automatically populated with DLRS from Billing Mapping with Billing Posting Status = &apos;Posted&apos;</description>
    <label>Total Revenue (net) - Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>