force-app/main/default/objects/Account/fields/TypeofInvestmentcompanyPick__c.field-meta.xml
<CustomField>
    <fullName>TypeofInvestmentcompanyPick__c</fullName>
    <label>Type of Investment company</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PE (Private Equity)</fullName>
                <label>Private Equity</label>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
            <value>
                <fullName>M&amp;A (Mergers and Acquisitions)</fullName>
            </value>
            <value>
                <fullName>Fund Administrator</fullName>
            </value>
            <value>
                <fullName>Fund Manager</fullName>
            </value>
            <value>
                <fullName>Investment Company</fullName>
            </value>
            <value>
                <fullName>Private Debt Firm</fullName>
            </value>
            <value>
                <fullName>Private Equity Firm (Investor)</fullName>
            </value>
            <value>
                <fullName>Private Equity Fund of Funds Manager</fullName>
            </value>
            <value>
                <fullName>Secondary Fund of Funds Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>