force-app/main/default/objects/Account/fields/UpsellNotes__c.field-meta.xml
<CustomField>
    <fullName>UpsellNotes__c</fullName>
    <label>Upsell Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>