force-app/main/default/objects/Account/fields/URLlinktoMSAdocument__c.field-meta.xml
<CustomField>
    <fullName>URLlinktoMSAdocument__c</fullName>
    <label>URL link to MSA document</label>
    <type>Url</type>
</CustomField>