force-app/main/default/objects/Account/fields/URLlinktoNDAdocument__c.field-meta.xml
<CustomField>
    <fullName>URLlinktoNDAdocument__c</fullName>
    <label>URL link to NDA document</label>
    <type>Url</type>
</CustomField>