force-app/main/default/objects/Account/fields/VatBusinessIdentificationNumberAuto__c.field-meta.xml
<CustomField>
    <fullName>VatBusinessIdentificationNumberAuto__c</fullName>
    <formula>AcctSeed__VAT_Business_Identification_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Business Identification Number</label>
    <type>Text</type>
</CustomField>