force-app/main/default/objects/Account/fields/VatNumber__c.field-meta.xml
<CustomField>
    <fullName>VatNumber__c</fullName>
    <inlineHelpText>For countries within the EU but outside Germany, please state the VAT number without spaces.</inlineHelpText>
    <label>Vat Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>