force-app/main/default/objects/Account/fields/VATVerificationDetails__c.field-meta.xml
<CustomField>
    <fullName>VATVerificationDetails__c</fullName>
    <label>VAT Verification Details</label>
    <type>TextArea</type>
</CustomField>