force-app/main/default/objects/Account/fields/VATVerified__c.field-meta.xml
<CustomField>
    <fullName>VATVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Verified</label>
    <type>Checkbox</type>
</CustomField>