force-app/main/default/objects/Account/fields/VATVerifiedFormula__c.field-meta.xml
<CustomField>
    <fullName>VATVerifiedFormula__c</fullName>
    <formula>IF( VATVerified__c, 
IMAGE(&apos;/resource/1528055405000/icons/icons/check-256.png&apos;, &apos;Verified&apos;, 40, 40) , 
IMAGE(&apos;/resource/1528055405000/icons/icons/wrong-2-256.png&apos;, &apos;Not verified&apos;,40,40))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Verified?</label>
    <type>Text</type>
</CustomField>