force-app/main/default/objects/Account/fields/VendorNumberTrig__c.field-meta.xml
<CustomField>
    <fullName>VendorNumberTrig__c</fullName>
    <description>Mapped to TransactionAssignement__c.</description>
    <inlineHelpText>Unique 5 digit Vendor Account number needed for Datev export. Populated automatically when Supplier Account is set to Active.</inlineHelpText>
    <label>Vendor Number (Deprecated)</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>