force-app/main/default/objects/Account/fields/VerticalsPick__c.field-meta.xml
<CustomField>
    <fullName>VerticalsPick__c</fullName>
    <description>Multi picklist of verticals as provided by Kirk</description>
    <inlineHelpText>Select all verticals this VC invests in</inlineHelpText>
    <label>Verticals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture &amp; Mining</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Engineering, Construction &amp; Real Estate</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Health Care &amp; Life Sciences</fullName>
            </value>
            <value>
                <fullName>High Tech</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Salesforce.org Sectors</fullName>
            </value>
            <value>
                <fullName>Travel, Transportation &amp; Hospitality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>