force-app/main/default/objects/Account/fields/was_checked_for_Profile_bug__c.field-meta.xml
<CustomField>
    <fullName>was_checked_for_Profile_bug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>was checked for Profile bug</label>
    <type>Checkbox</type>
</CustomField>