force-app/main/default/objects/Account/fields/Websitelinktoportfoliocompanies__c.field-meta.xml
<CustomField>
    <fullName>Websitelinktoportfoliocompanies__c</fullName>
    <label>Website link to portfolio companies</label>
    <type>Url</type>
</CustomField>