force-app/main/default/objects/Account/recordTypes/BusinessAccount.recordType-meta.xml
<RecordType>
    <fullName>BusinessAccount</fullName>
    <active>true</active>
    <description>For prospects in qualification after Lead and customers.</description>
    <label>1 - Prospects &amp; Customers</label>
</RecordType>