force-app/main/default/objects/Account/recordTypes/InternalAccount.recordType-meta.xml
<RecordType>
    <fullName>InternalAccount</fullName>
    <active>true</active>
    <description>For EMPAUA entities and circles.</description>
    <label>3 - Internal Account</label>
</RecordType>