force-app/main/default/objects/Account/recordTypes/PEVCandMA.recordType-meta.xml
<RecordType>
    <fullName>PEVCandMA</fullName>
    <active>true</active>
    <description>PE (Private Equity), VC (Venture Capital), M&amp;A (Mergers and Acquisitions) that are related to our clients.</description>
    <label>4 - PE, VC and M&amp;A</label>
</RecordType>