force-app/main/default/objects/Account/recordTypes/Supplier.recordType-meta.xml
<RecordType>
    <fullName>Supplier</fullName>
    <active>true</active>
    <description>For suppliers that are delivering services or technology to us and for partners including referring and reselling partnerships</description>
    <label>2 - Suppliers &amp; Partners</label>
</RecordType>